# Interval-Shading

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.sh
objects/: bunny.vtk  crystal.vtk
objects/jet/: airbus_simplifiedBackCover_013.vtk
src/: armadillo.cpp  asteroids.cpp  bunny.cpp  crystal.cpp  jet.cpp  singleTet.cpp
src/shader/armadillo/: interval.frag  mesh.mesh  postProcess.frag
src/shader/asteroid/: interval.frag  mesh.mesh  model.comp  postProcess.frag
src/shader/bunny/: interval.frag  mesh.mesh  postProcess.frag
src/shader/crystal/: interval.frag  mesh.mesh  postProcess.frag
src/shader/jet/: interval.frag  mesh.mesh  postProcess.frag
src/shader/singleTet/: interval.frag  mesh.mesh
src/utils/: Tetmesh.h  trackball.h
